--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "pltester",
+  "name": "pltest",
   "version": "0.0.1",
   "description": "Woveon test and development plugin.",
   "main": "src/index.js",
   "scripts": {
     "//run": "Run the services",
     "start": "node src/index.js",
-    "pltestwl": "node src/pltestwl.js",
-    "devpltestwl": "nodemon src/pltestwl.js",
-    "pltestrl": "node src/pltestrl.js",
-    "devpltestrl": "nodemon src/pltestrl.js",
-    "pltestov": "node src/pltestov.js",
-    "devpltestov": "nodemon src/pltestov.js",
+    "wl": "node src/wl.js",
+    "devwl": "nodemon src/wl.js",
+    "rl": "node src/rl.js",
+    "devrl": "nodemon src/rl.js",
+    "ov": "node src/ov.js",
+    "devov": "nodemon src/ov.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Chadwick Wingrave",
